--- a/style.css
+++ b/style.css
@@ -1,21 +1,8 @@
-h2 {
-/* axe Y */
-    -moz-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-/* axe X */
-    -moz-transform: scale(1, -1);
-    -webkit-transform: scale(1, -1);
-    -o-transform: scale(1, -1);
-    -ms-transform: scale(1, -1);
-    transform: scale(1, -1);
-/* rest */
+h1{
+    font-size: 50px;
     text-align: center;
 }
-
-h3 {
+.miroir {
 /* axe Y */
     -moz-transform: scale(-1, 1);
     -webkit-transform: scale(-1, 1);
@@ -29,56 +16,6 @@ h3 {
     -ms-transform: scale(1, -1);
     transform: scale(1, -1);
 /* rest */
-    text-align: center;
-}
-
-h4 {
-/* axe Y */
-    -moz-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-/* axe X */
-    -moz-transform: scale(1, -1);
-    -webkit-transform: scale(1, -1);
-    -o-transform: scale(1, -1);
-    -ms-transform: scale(1, -1);
-    transform: scale(1, -1);
-/* rest */
-    text-align: center;
-}
-
-h5 {
-/* axe Y */
-    -moz-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-/* axe X */
-    -moz-transform: scale(1, -1);
-    -webkit-transform: scale(1, -1);
-    -o-transform: scale(1, -1);
-    -ms-transform: scale(1, -1);
-    transform: scale(1, -1);
-/* rest */
-    text-align: center;
-}
-
-h6 {
-/* axe Y */
-    -moz-transform: scale(-1, 1);
-    -webkit-transform: scale(-1, 1);
-    -o-transform: scale(-1, 1);
-    -ms-transform: scale(-1, 1);
-    transform: scale(-1, 1);
-/* axe X */
-    -moz-transform: scale(1, -1);
-    -webkit-transform: scale(1, -1);
-    -o-transform: scale(1, -1);
-    -ms-transform: scale(1, -1);
-    transform: scale(1, -1);
-/* rest */
+    font-size: 50px;
     text-align: center;
 }
