--- a/style.css
+++ b/style.css
@@ -19,3 +19,28 @@ h1{
     font-size: 50px;
     text-align: center;
 }
+
+.portrait {
+    width: 50px;
+    height: 50px;
+}
+
+.conteneur2 {
+    display: grid;
+    grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
+}
+
+.conteneur4 {
+    display: grid;
+    grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
+}
+
+.conteneur6 {
+    display: grid;
+    grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
+}
+
+.conteneur8 {
+    display: grid;
+    grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
+}
