--- a/style.css
+++ b/style.css
@@ -48,3 +48,10 @@ h1{
     grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
     width: 100vw;
 }
+
+@font-face {
+    font-family: 'ohthehorror';
+    src: url('../fonts/ohthehorror.woff2') format('woff2'), url('../fonts/ohthehorror.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
