--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ h1{
     font-size: 50px;
     text-align: center;
 }
+
+h4 {
+    font-family: 'ohthehorror';
+}
+
 .miroir {
 /* axe Y */
     -moz-transform: scale(-1, 1);
