--- a/style.css
+++ b/style.css
@@ -26,13 +26,14 @@ h4 {
 }
 
 .portrait {
-    width: 50px;
-    height: 50px;
+    width: 30vw;
+    height: 75vh;
 }
 
 .conteneur2 {
     display: grid;
     grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
+    height: 100vh;
     width: 100vw;
 }
 
