--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1{
     font-size: 50px;
     text-align: center;
+    margin-bottom: 0%;
 }
 
 h4 {
@@ -21,8 +22,10 @@ h4 {
     -ms-transform: scale(1, -1);
     transform: scale(1, -1);
 /* rest */
+    margin-top: 0%;
     font-size: 50px;
     text-align: center;
+    color: rgba(27, 27, 27, 0.733);
 }
 
 .portrait {
@@ -39,7 +42,7 @@ h4 {
 
 .conteneur4 {
     display: grid;
-    grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
+    grid-template: repeat(3, 160px) 1fr / repeat(2, 150vw) 1fr;
     width: 100vw;
 }
 
