--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ h4 {
 
 .conteneur2 {
     display: grid;
-    grid-template: repeat(2, 122px) 1fr / repeat(3, 160px) 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 100px);
     height: 100vh;
     width: 100vw;
 }
