--- a/style.css
+++ b/style.css
@@ -29,8 +29,24 @@ h4 {
 }
 
 .portrait {
+    grid-column: 1;
+    grid-row: 1 / 3 ;
     width: 30vw;
     height: 75vh;
+}
+
+.mot1 {
+    grid-column: 2;
+    grid-row: 1;
+}
+
+.mot2 {
+    grid-column: 2;
+    grid-row: 2;
+}
+.mot3 {
+    grid-column: 2;
+    grid-row: 3;
 }
 
 .conteneur2 {
