--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1{
     font-size: 50px;
     text-align: center;
-    margin-bottom: 0%;
+    width: 40vw;
 }
 
 h4 {
@@ -22,37 +22,43 @@ h4 {
     -ms-transform: scale(1, -1);
     transform: scale(1, -1);
 /* rest */
-    margin-top: 0%;
     font-size: 50px;
+    width: 40vw;
     text-align: center;
     color: rgba(27, 27, 27, 0.733);
-}
-
-.portrait {
-    grid-column: 1;
-    grid-row: 1 / 3 ;
-}
-
-.mot1 {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.mot2 {
-    grid-column: 2;
-    grid-row: 2;
-}
-.mot3 {
-    grid-column: 2;
+    grid-column: 4 / 7;
     grid-row: 3;
 }
 
 .conteneur {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(9, 100px);
+    grid-template-columns: repeat(10, 10vw);
+    grid-template-rows: repeat(15, 6.6vh);
     height: 100vh;
     width: 100vw;
+}
+.titre {
+    grid-column: 4 / 7;
+    grid-row: 1;
+}
+.left {
+    grid-column: 2 / 5;
+    grid-row: 5 / 15;
+}
+.portrait {
+    height: 72.6vh;
+}
+.mot1 {
+    grid-column: 7 / 8;
+    grid-row: 6;
+}
+.mot2 {
+    grid-column: 8 / 9;
+    grid-row: 10;
+}
+.mot3 {
+    grid-column: 7 / 8;
+    grid-row: 14;
 }
 
 .conteneur2 {
