--- a/style.css
+++ b/style.css
@@ -68,6 +68,22 @@ h4 {
     height: 100vh;
     width: 100vw;
 }
+.portraitby {
+    grid-column: 6 / 9;
+    grid-row: 4 / 15;
+}
+.mot1by {
+    grid-column: 3 / 4;
+    grid-row: 6;
+}
+.mot2by {
+    grid-column: 2 / 3;
+    grid-row: 10;
+}
+.mot3by {
+    grid-column: 3 / 4;
+    grid-row: 14;
+}
 
 .conteneur3 {
     display: grid;
