--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h4 {
     grid-row: 5 / 15;
 }
 .portrait {
+    width: 40vw;
     height: 72.6vh;
 }
 .mot1 {
@@ -68,9 +69,9 @@ h4 {
     height: 100vh;
     width: 100vw;
 }
-.portraitby {
+.right {
     grid-column: 6 / 9;
-    grid-row: 4 / 15;
+    grid-row: 5 / 15;
 }
 .mot1by {
     grid-column: 3 / 4;
