--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@ h4 {
     grid-template-rows: repeat(15, 6.6vh);
     height: 100vh;
     width: 100vw;
+    background-color:silver;
+    background-image:
+    radial-gradient(circle at 100% 150%, silver 24%, white 24%, white 28%, silver 28%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
+    radial-gradient(circle at 0    150%, silver 24%, white 24%, white 28%, silver 28%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
+    radial-gradient(circle at 50%  100%, white 10%, silver 10%, silver 23%, white 23%, white 30%, silver 30%, silver 43%, white 43%, white 50%, silver 50%, silver 63%, white 63%, white 71%, transparent 71%, transparent),
+    radial-gradient(circle at 100% 50%, white 5%, silver 5%, silver 15%, white 15%, white 20%, silver 20%, silver 29%, white 29%, white 34%, silver 34%, silver 44%, white 44%, white 49%, transparent 49%, transparent),
+    radial-gradient(circle at 0    50%, white 5%, silver 5%, silver 15%, white 15%, white 20%, silver 20%, silver 29%, white 29%, white 34%, silver 34%, silver 44%, white 44%, white 49%, transparent 49%, transparent);
+    background-size: 100px 50px;
 }
 .titre {
     grid-column: 4 / 7;
@@ -68,6 +76,13 @@ h4 {
     grid-template-rows: repeat(15, 6.6vh);
     height: 100vh;
     width: 100vw;
+    background:
+    radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent),
+    radial-gradient(circle, transparent 20%, slategray 20%, slategray 80%, transparent 80%, transparent) 50px 50px,
+    linear-gradient(#A8B1BB 8px, transparent 8px) 0 -4px,
+    linear-gradient(90deg, #A8B1BB 8px, transparent 8px) -4px 0;
+    background-color: slategray;
+    background-size:100px 100px, 100px 100px, 50px 50px, 50px 50px;
 }
 .right {
     grid-column: 6 / 9;
@@ -92,6 +107,12 @@ h4 {
     grid-template-rows: repeat(15, 6.6vh);
     height: 100vh;
     width: 100vw;
+    background: 
+    linear-gradient(63deg,white 23%, transparent 23%) 7px 0,
+    linear-gradient(63deg, transparent 74%, white 78%),
+    linear-gradient(63deg, transparent 34%, white 38%, white 58%, transparent 62%),
+    #444;
+    background-size: 16px 48px;;
 }
 
 .conteneur4 {
@@ -100,6 +121,12 @@ h4 {
     grid-template-rows: repeat(15, 6.6vh);
     height: 100vh;
     width: 100vw;
+    background:
+    linear-gradient(-45deg, grey 25%, transparent 25%, transparent 75%, black 75%, black) 0 0,
+    linear-gradient(-45deg, black 25%, transparent 25%, transparent 75%, grey 75%, grey) 1em 1em,
+    linear-gradient(45deg, black 17%, transparent 17%, transparent 25%, black 25%, black 36%, transparent 36%, transparent 64%, black 64%, black 75%, transparent 75%, transparent 83%, black 83%) 1em 1em;
+    background-color: grey;
+    background-size: 2em 2em;
 }
 
 .conteneur5 {
