--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     background-size: cover;
 }
 
+.trans {
+    height: 100px;
+    width: 100vw;
+}
+
 h1{
     font-size: 50px;
     text-align: center;
