--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
-    background-image: url(image/RyukFond.jpg);
-    background-size: cover;
-    background-attachment: fixed;
+    background-color: white;
 }
 
 .trans {
-    height: 200px;
-    width: 100vw;
+    margin: auto;
+    height: 300px;
+    width: 60vw;
+    background-image: url(image/RyukFond.jpg);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 .ABCD {
@@ -49,7 +51,7 @@ h4 {
 .conteneur {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(17, 6.6vh);
+    grid-template-rows: repeat(18, 6.6vh);
     width: 100vw;
     background-color: transparent;
     background-color:silver;
@@ -71,7 +73,7 @@ h4 {
 }
 .portrait {
     width: 40vw;
-    height: 79.2vh;
+    height: 85.8vh;
 }
 .mot1 {
     grid-column: 7 / 8;
@@ -89,7 +91,7 @@ h4 {
 .conteneur2 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(17, 6.6vh);
+    grid-template-rows: repeat(18, 6.6vh);
     background:
     radial-gradient(circle, transparent 20%, grey 20%, grey 80%, transparent 80%, transparent),
     radial-gradient(circle, transparent 20%, grey 20%, grey 80%, transparent 80%, transparent) 50px 50px,
@@ -118,7 +120,7 @@ h4 {
 .conteneur3 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(17, 6.6vh);
+    grid-template-rows: repeat(18, 6.6vh);
     background: 
     linear-gradient(63deg,grey 23%, transparent 23%) 7px 0,
     linear-gradient(63deg, transparent 74%, grey 78%),
@@ -130,7 +132,7 @@ h4 {
 .conteneur4 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(17, 6.6vh);
+    grid-template-rows: repeat(18, 6.6vh);
     background:
     linear-gradient(-45deg, grey 25%, transparent 25%, transparent 75%, black 75%, black) 0 0,
     linear-gradient(-45deg, black 25%, transparent 25%, transparent 75%, grey 75%, grey) 1em 1em,
@@ -142,7 +144,7 @@ h4 {
 .conteneur5 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(17, 6.6vh);
+    grid-template-rows: repeat(18, 6.6vh);
     background-color:black;
     background-image:
     radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
