--- a/style.css
+++ b/style.css
@@ -2,6 +2,18 @@ body {
     background-color: white;
 }
 
+.Bonjour {
+    height: 100px;
+    width: 100vh;
+}
+
+.Axe {
+    height: 100px;
+    width: 50vw;
+    margin-left: 25vw;
+    margin-right: 25vw;
+}
+
 .trans {
     margin: auto;
     height: 300px;
@@ -51,7 +63,7 @@ h4 {
 .conteneur {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(18, 6.6vh);
+    grid-template-rows: repeat(19, 6.6vh);
     width: 100vw;
     background-color: transparent;
     background-color:silver;
@@ -73,7 +85,7 @@ h4 {
 }
 .portrait {
     width: 40vw;
-    height: 85.8vh;
+    height: 95.7vh;
 }
 .mot1 {
     grid-column: 7 / 8;
@@ -91,7 +103,7 @@ h4 {
 .conteneur2 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(18, 6.6vh);
+    grid-template-rows: repeat(19, 6.6vh);
     background:
     radial-gradient(circle, transparent 20%, grey 20%, grey 80%, transparent 80%, transparent),
     radial-gradient(circle, transparent 20%, grey 20%, grey 80%, transparent 80%, transparent) 50px 50px,
@@ -120,7 +132,7 @@ h4 {
 .conteneur3 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(18, 6.6vh);
+    grid-template-rows: repeat(19, 6.6vh);
     background: 
     linear-gradient(63deg,grey 23%, transparent 23%) 7px 0,
     linear-gradient(63deg, transparent 74%, grey 78%),
@@ -132,7 +144,7 @@ h4 {
 .conteneur4 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(18, 6.6vh);
+    grid-template-rows: repeat(19, 6.6vh);
     background:
     linear-gradient(-45deg, grey 25%, transparent 25%, transparent 75%, black 75%, black) 0 0,
     linear-gradient(-45deg, black 25%, transparent 25%, transparent 75%, grey 75%, grey) 1em 1em,
@@ -144,7 +156,7 @@ h4 {
 .conteneur5 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
-    grid-template-rows: repeat(18, 6.6vh);
+    grid-template-rows: repeat(19, 6.6vh);
     background-color:black;
     background-image:
     radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
