--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 body {
-    background-color: white;
+    background-color: transparent;
+    background-color:silver;
+    background-image:
+    radial-gradient(circle at 100% 150%, silver 24%, white 24%, white 28%, silver 28%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
+    radial-gradient(circle at 0    150%, silver 24%, white 24%, white 28%, silver 28%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
+    radial-gradient(circle at 50%  100%, white 10%, silver 10%, silver 23%, white 23%, white 30%, silver 30%, silver 43%, white 43%, white 50%, silver 50%, silver 63%, white 63%, white 71%, transparent 71%, transparent),
+    radial-gradient(circle at 100% 50%, white 5%, silver 5%, silver 15%, white 15%, white 20%, silver 20%, silver 29%, white 29%, white 34%, silver 34%, silver 44%, white 44%, white 49%, transparent 49%, transparent),
+    radial-gradient(circle at 0    50%, white 5%, silver 5%, silver 15%, white 15%, white 20%, silver 20%, silver 29%, white 29%, white 34%, silver 34%, silver 44%, white 44%, white 49%, transparent 49%, transparent);
+    background-size: 100px 50px;
 }
 
 .Bonjour {
@@ -15,7 +23,9 @@ body {
 }
 
 .trans {
-    margin: auto;
+    margin-left: 19vw;
+    margin-right: 21vw;
+    margin-top: -15.5px;
     height: 300px;
     width: 60vw;
     background-image: url(image/RyukFond.jpg);
@@ -65,15 +75,12 @@ h4 {
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
     width: 100vw;
-    background-color: transparent;
-    background-color:silver;
-    background-image:
-    radial-gradient(circle at 100% 150%, silver 24%, white 24%, white 28%, silver 28%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
-    radial-gradient(circle at 0    150%, silver 24%, white 24%, white 28%, silver 28%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
-    radial-gradient(circle at 50%  100%, white 10%, silver 10%, silver 23%, white 23%, white 30%, silver 30%, silver 43%, white 43%, white 50%, silver 50%, silver 63%, white 63%, white 71%, transparent 71%, transparent),
-    radial-gradient(circle at 100% 50%, white 5%, silver 5%, silver 15%, white 15%, white 20%, silver 20%, silver 29%, white 29%, white 34%, silver 34%, silver 44%, white 44%, white 49%, transparent 49%, transparent),
-    radial-gradient(circle at 0    50%, white 5%, silver 5%, silver 15%, white 15%, white 20%, silver 20%, silver 29%, white 29%, white 34%, silver 34%, silver 44%, white 44%, white 49%, transparent 49%, transparent);
-    background-size: 100px 50px;
+    background: 
+    linear-gradient(63deg,grey 23%, transparent 23%) 7px 0,
+    linear-gradient(63deg, transparent 74%, grey 78%),
+    linear-gradient(63deg, transparent 34%, grey 38%, grey 58%, transparent 62%),
+    white;
+    background-size: 16px 48px;;
 }
 .titre {
     grid-column: 4 / 7;
@@ -104,13 +111,12 @@ h4 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
-    background:
-    radial-gradient(circle, transparent 20%, grey 20%, grey 80%, transparent 80%, transparent),
-    radial-gradient(circle, transparent 20%, grey 20%, grey 80%, transparent 80%, transparent) 50px 50px,
-    linear-gradient(#80ee93 8px, transparent 8px) 0 -4px,
-    linear-gradient(90deg, #80ee93 8px, transparent 8px) -4px 0;
-    background-color: grey;
-    background-size:100px 100px, 100px 100px, 50px 50px, 50px 50px;
+    background: 
+    linear-gradient(70deg,grey 23%, transparent 23%) 7px 0,
+    linear-gradient(70deg, transparent 74%, grey 78%),
+    linear-gradient(70deg, transparent 34%, grey 38%, grey 58%, transparent 62%),
+    white;
+    background-size: 16px 48px;;
 }
 .right {
     grid-column: 6 / 9;
@@ -134,9 +140,9 @@ h4 {
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
     background: 
-    linear-gradient(63deg,grey 23%, transparent 23%) 7px 0,
-    linear-gradient(63deg, transparent 74%, grey 78%),
-    linear-gradient(63deg, transparent 34%, grey 38%, grey 58%, transparent 62%),
+    linear-gradient(77deg,grey 23%, transparent 23%) 7px 0,
+    linear-gradient(77deg, transparent 74%, grey 78%),
+    linear-gradient(77deg, transparent 34%, grey 38%, grey 58%, transparent 62%),
     white;
     background-size: 16px 48px;;
 }
@@ -145,12 +151,12 @@ h4 {
     display: grid;
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
-    background:
-    linear-gradient(-45deg, grey 25%, transparent 25%, transparent 75%, black 75%, black) 0 0,
-    linear-gradient(-45deg, black 25%, transparent 25%, transparent 75%, grey 75%, grey) 1em 1em,
-    linear-gradient(45deg, black 17%, transparent 17%, transparent 25%, black 25%, black 36%, transparent 36%, transparent 64%, black 64%, black 75%, transparent 75%, transparent 83%, black 83%) 1em 1em;
-    background-color: grey;
-    background-size: 2em 2em;
+    background: 
+    linear-gradient(77deg,grey 23%, transparent 23%) 7px 0,
+    linear-gradient(77deg, transparent 74%, grey 78%),
+    linear-gradient(77deg, transparent 34%, grey 38%, grey 58%, transparent 62%),
+    white;
+    background-size: 16px 48px;;
 }
 
 .conteneur5 {
