--- a/style.css
+++ b/style.css
@@ -52,6 +52,9 @@ body {
 .FBlanc {
     background-image: url(image/théatre2.png);
     background-size: cover;
+    background-repeat: no-repeat;
+    width: 100vw;
+    margin-left: -10px;
 }
 
 .ABCD {
@@ -65,7 +68,7 @@ body {
 }
 
 h1{
-    font-size: 50px;
+    font-size: 40px;
     text-align: center;
     width: 40vw;
 }
@@ -88,7 +91,7 @@ h4 {
     -ms-transform: scale(1, -1);
     transform: scale(1, -1);
 /* rest */
-    font-size: 50px;
+    font-size: 40px;
     width: 40vw;
     text-align: center;
     color: rgba(27, 27, 27, 0.733);
@@ -122,14 +125,17 @@ h4 {
 .mot1 {
     grid-column: 7 / 8;
     grid-row: 6;
+    font-size: 30px;
 }
 .mot2 {
     grid-column: 8 / 9;
     grid-row: 10;
+    font-size: 30px;
 }
 .mot3 {
     grid-column: 7 / 8;
     grid-row: 14;
+    font-size: 30px;
 }
 
 .conteneur2 {
@@ -150,14 +156,17 @@ h4 {
 .mot1by {
     grid-column: 3 / 4;
     grid-row: 6;
+    font-size: 30px;
 }
 .mot2by {
     grid-column: 2 / 3;
     grid-row: 10;
+    font-size: 30px;
 }
 .mot3by {
     grid-column: 3 / 4;
     grid-row: 14;
+    font-size: 30px;
 }
 
 .conteneur3 {
