--- a/style.css
+++ b/style.css
@@ -126,19 +126,19 @@ h4 {
     grid-column: 7 / 8;
     grid-row: 6;
     font-size: 30px;
-    animation: -croissant 3s linear 2s  normal none;
+    animation: -croissant 3s linear 10s infinite normal none;
 }
 .mot2 {
     grid-column: 8 / 9;
     grid-row: 10;
     font-size: 30px;
-    animation: -moveX 3s linear 2s  normal none;
+    animation: -moveX 3s linear 10s infinite normal none;
 }
 .mot3 {
     grid-column: 7 / 8;
     grid-row: 14;
     font-size: 30px;
-    animation: -decroissant 3s linear 2s  normal none;
+    animation: -decroissant 3s linear 10s infinite normal none;
 }
 
 .conteneur2 {
@@ -160,19 +160,19 @@ h4 {
     grid-column: 3 / 4;
     grid-row: 6;
     font-size: 30px;
-    animation: decroissant 3s linear 2s  normal none;
+    animation: decroissant 3s linear 10s infinite normal none;
 }
 .mot2by {
     grid-column: 2 / 3;
     grid-row: 10;
     font-size: 30px;
-    animation: moveX 3s linear 2s  normal;
+    animation: moveX 3s linear 10s infinite normal none;
 }
 .mot3by {
     grid-column: 3 / 4;
     grid-row: 14;
     font-size: 30px;
-    animation: croissant 3s linear 2s  normal none;
+    animation: croissant 3s linear 10s infinite normal none;
 }
 
 .conteneur3 {
@@ -256,55 +256,181 @@ h4 {
 }
 
 @keyframes croissant {
-    from {
+    0% {
         transform: translate(0px, 0px);
     }
-    to {
+    12.5% {
         transform: translate(500px, -500px);
+    }
+    25% {
+        transform: translateX(0px, 0px);
+    }
+    37.5% {
+        transform: translate(-2px, 2px);
+    }
+    50% {
+        transform: translate(2px, -2px);
+    }
+    62.5% {
+        transform: translate(-2px, 2px);
+    }
+    75% {
+        transform: translate(2px, -2px);
+    }
+    87.5% {
+        transform: translate(-2px, 2px);
+    }
+    100% {
+        transform: translate(2px, -2px);
     }
 }
 
 @keyframes -croissant {
-    from {
+    0% {
         transform: translate(0px, 0px);
     }
-    to {
+    12.5% {
         transform: translate(-500px, 500px);
+    }
+    25% {
+        transform: translateX(0px, 0px);
+    }
+    37.5% {
+        transform: translate(2px, -2px);
+    }
+    50% {
+        transform: translate(-2px, 2px);
+    }
+    62.5% {
+        transform: translate(2px, -2px);
+    }
+    75% {
+        transform: translate(-2px, 2px);
+    }
+    87.5% {
+        transform: translate(2px, -2px);
+    }
+    100% {
+        transform: translate(-2px, 2px);
     }
 }
 
 @keyframes decroissant {
-    from { 
-        transform: translate(0px, 0px) 
+    0% {
+        transform: translate(0px, 0px);
     }
-    to { 
-        transform: translate(500px, 500px) 
+    12.5% {
+        transform: translate(500px, 500px);
+    }
+    25% {
+        transform: translateX(0px, 0px);
+    }
+    37.5% {
+        transform: translate(-2px, -2px);
+    }
+    50% {
+        transform: translate(2px, 2px);
+    }
+    62.5% {
+        transform: translate(-2px, -2px);
+    }
+    75% {
+        transform: translate(2px, 2px);
+    }
+    87.5% {
+        transform: translate(-2px, -2px);
+    }
+    100% {
+        transform: translate(2px, 2px);
     }
 }
 
 @keyframes -decroissant {
-    from { 
-        transform: translate(0px, 0px) 
+    0% {
+        transform: translate(0px, 0px);
     }
-    to { 
-        transform: translate(-500px, -500px) 
+    12.5% {
+        transform: translate(-500px, -500px);
+    }
+    25% {
+        transform: translateX(0px, 0px);
+    }
+    37.5% {
+        transform: translate(2px, 2px);
+    }
+    50% {
+        transform: translate(-2px, -2px);
+    }
+    62.5% {
+        transform: translate(2px, 2px);
+    }
+    75% {
+        transform: translate(-2px, -2px);
+    }
+    87.5% {
+        transform: translate(2px, 2px);
+    }
+    100% {
+        transform: translate(-2px, -2px);
     }
 }
 
 @keyframes moveX {
-    from {
-        transform: translateX(0px); 
+    0% {
+        transform: translateX(0px);
     }
-    to {
+    12.5% {
         transform: translateX(700px);
+    }
+    25% {
+        transform: translateX(0px);
+    }
+    37.5% {
+        transform: translateX(-2px);
+    }
+    50% {
+        transform: translateX(2px);
+    }
+    62.5% {
+        transform: translateX(-2px);
+    }
+    75% {
+        transform: translateX(2px);
+    }
+    87.5% {
+        transform: translateX(-2px);
+    }
+    100% {
+        transform: translateX(2px);
     }
 }
 
 @keyframes -moveX {
-    from {
-        transform: translateX(0px); 
+    0% {
+        transform: translateX(0px);
     }
-    to {
+    12.5% {
         transform: translateX(-700px);
+    }
+    25% {
+        transform: translateX(0px);
+    }
+    37.5% {
+        transform: translateX(2px);
+    }
+    50% {
+        transform: translateX(-2px);
+    }
+    62.5% {
+        transform: translateX(2px);
+    }
+    75% {
+        transform: translateX(-2px);
+    }
+    87.5% {
+        transform: translateX(2px);
+    }
+    100% {
+        transform: translateX(-2px);
     }
 }
