--- a/style.css
+++ b/style.css
@@ -54,11 +54,6 @@ body {
     width: 60vw;
 }
 
-.trans3 {
-    height: 100px;
-    width: 100vw;
-}
-
 .FBlanc {
     background-image: url(image/théatre2.png);
     background-size: cover;
@@ -76,14 +71,30 @@ body {
 }
 
 .FBlanc4 {
-    background-size: cover;
-    background-repeat: no-repeat;
     width: 100vw;
+    margin-top: -100px;
     margin-left: -10px;
 }
 .scene {
-    background-image: url(image/théatre4.png);
-    background-size: cover;
+    margin-top: 7vh;
+    background-color:black;
+    background-image:
+    radial-gradient(white, rgba(255,255,255,.2) 2px, transparent 40px),
+    radial-gradient(white, rgba(255,255,255,.15) 1px, transparent 30px),
+    radial-gradient(white, rgba(255,255,255,.1) 2px, transparent 40px),
+    radial-gradient(rgba(255,255,255,.4), rgba(255,255,255,.1) 2px, transparent 30px);
+    background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
+    background-position: 0 0, 45px 65px, 135px 275px, 75px 105px;
+    display: grid;
+    grid-template-columns: repeat(10, 10vw);
+    grid-template-rows: repeat(4, 6.6vh);
+}
+
+.thea {
+    grid-row: 1 / 4;
+    grid-column: 1 /10;
+    height: 30vh;
+    width: 99vw;
 }
 
 .ABCD {
@@ -91,9 +102,13 @@ body {
     text-align: center;
 }
 
-.ABCD2 {
+.ABCDE {
+    grid-row: 2;
+    grid-column: 5 / 7;
     color:white;
     text-align: center;
+    font-size: 50px;
+    animation: secoue 1s linear 1s infinite normal none;
 }
 
 h1{
@@ -189,19 +204,19 @@ h4 {
     grid-column: 3 / 4;
     grid-row: 6;
     font-size: 30px;
-    animation: decroissant 4s linear 10s infinite normal none;
+    animation: decroissant 10s linear 2s infinite normal none;
 }
 .mot2by {
     grid-column: 2 / 3;
     grid-row: 10;
     font-size: 30px;
-    animation: moveX 4s linear 10s infinite normal none;
+    animation: moveX 10s linear 2s infinite normal none;
 }
 .mot3by {
     grid-column: 3 / 4;
     grid-row: 14;
     font-size: 30px;
-    animation: croissant 4s linear 10s infinite normal none;
+    animation: croissant 10s linear 2s infinite normal none;
 }
 
 .conteneur3 {
@@ -460,6 +475,26 @@ h4 {
     100% {
         transform: translateX(0px);
     }
+}
+
+@keyframes secoue {
+    0% {
+        transform: rotate(0deg);
+    }
+    25% {
+        transform: rotate(-10deg);
+    }
+    50% {
+        transform: rotate(0deg);
+    }
+    75% {
+        transform: rotate(10deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+
+
 }
 
 @font-face {
