--- a/style.css
+++ b/style.css
@@ -161,10 +161,11 @@ h4 {
 .left {
     grid-column: 2 / 5;
     grid-row: 5 / 15;
-}
-.portrait {
     width: 40vw;
     height: 95.7vh;
+}
+.portrait {
+    
 }
 .mot1 {
     grid-column: 7 / 8;
@@ -201,6 +202,8 @@ h4 {
 .right {
     grid-column: 6 / 9;
     grid-row: 5 / 15;
+    width: 40vw;
+    height: 95.7vh;
 }
 .mot1by {
     grid-column: 3 / 4;
