hidden overflow and return width: 100vw

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    width: 100%;
+    width: 100vw;
     background-color: transparent;
     background-image:
     radial-gradient(circle at 100% 150%, pink 24%, lightblue 24%, lightblue 28%, pink 28%, pink 36%, lightblue 36%, lightblue 40%, transparent 40%, transparent),
@@ -8,7 +8,7 @@ body {
     radial-gradient(circle at 100% 50%, white 5%, lightgreen 5%, lightgreen 15%, lightblue 15%, lightblue 20%, pink 20%, pink 29%, lightblue 29%, lightblue 34%, pink 34%, pink 44%, lightblue 44%, lightblue 49%, transparent 49%, transparent),
     radial-gradient(circle at 0    50%, white 5%, lightgreen 5%, lightgreen 15%, lightblue 15%, lightblue 20%, pink 20%, pink 29%, lightblue 29%, lightblue 34%, pink 34%, pink 44%, lightblue 44%, lightblue 49%, transparent 49%, transparent);
     background-size: 100px 50px;
-    /* overflow-x: hidden;  */
+    overflow-x: hidden;
 }
 
 /* .debut-site {
@@ -19,47 +19,47 @@ body {
 .theatre {
     background-image: url(image/theatre.jpg);
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     margin-left: -10px;
     margin-right: 20px;
 }
 
 .bonjour {
     height: 100px;
-    width: 100%;
+    width: 100vh;
 }
 
 .axe {
     height: 100px;
-    width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
+    width: 50vw;
+    margin-left: 25vw;
+    margin-right: 25vw;
 }
 
 .trans {
-    margin-left: 19%;
-    margin-right: 21%;
+    margin-left: 19vw;
+    margin-right: 21vw;
     margin-top: -15.5px;
     height: 100px;
-    width: 60%;
+    width: 60vw;
     background-image: url(image/ryukfond.jpg);
     background-size: cover;
     background-attachment: fixed;
 }
 
 .trans2 {
-    margin-left: 19%;
-    margin-right: 21%;
+    margin-left: 19vw;
+    margin-right: 21vw;
     margin-top: -15.5px;
     height: 100px;
-    width: 60%;
+    width: 60vw;
 }
 
 .fblanc {
     background-image: url(image/theatre2.png);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
+    width: 100vw;
     margin-left: -10px;
 }
 
@@ -67,17 +67,16 @@ body {
     background-image: url(image/theatre3.png);
     background-size: cover;
     background-repeat: no-repeat;
-    width: 100%;
+    width: 100vw;
     margin-left: -10px;
 }
 
 .fblanc4 {
-    width: 100%;
+    width: 100vw;
     margin-top: -100px;
     margin-left: -10px;
 }
 .scene {
-    width: 100%;
     margin-top: 7vh;
     background-color:black;
     background-image:
@@ -96,7 +95,7 @@ body {
     grid-row: 1 / 4;
     grid-column: 1 /10;
     height: 30vh;
-    width: 100%;
+    width: 100vw;
 }
 
 .abcd {
@@ -146,7 +145,6 @@ h4 {
 }
 
 .conteneur {
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
@@ -192,7 +190,6 @@ h4 {
 }
 
 .conteneur2 {
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
@@ -229,7 +226,6 @@ h4 {
 }
 
 .conteneur3 {
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
@@ -242,7 +238,6 @@ h4 {
 }
 
 .conteneur4 {
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(19, 6.6vh);
@@ -255,7 +250,6 @@ h4 {
 }
 
 .conteneur5 {
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(10, 10vw);
     grid-template-rows: repeat(25, 6.6vh);
