centering trans and trans2

--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ body {
 }
 
 .trans {
-    margin-left: 19vw;
-    margin-right: 21vw;
+    margin-left: 20vw;
+    margin-right: 20vw;
     margin-top: -15.5px;
     height: 100px;
     width: 60vw;
@@ -48,8 +48,8 @@ body {
 }
 
 .trans2 {
-    margin-left: 19vw;
-    margin-right: 21vw;
+    margin-left: 20vw;
+    margin-right: 20svw;
     margin-top: -15.5px;
     height: 100px;
     width: 60vw;
